# apple_assessment

./: README.md
archive/: 3month_weather.csv  problem.txt  takehome-instructions.md
weather_project/: .gitignore  README.md  context.md  pyproject.toml
weather_project/data/: weather.db
weather_project/docs/: PDF_PARSER_NOTES.md  image_db_validation_signoff_mar9-18.md  llm_image_db_validation.md  schema.md
weather_project/notebooks/: weather_analysis.ipynb  weather_analysis_full_columns.ipynb
weather_project/scripts/: compare_parser_vs_image_rec.sh  export_daily_weather_csv.sh  inspect_db.sh  output.txt  report_pdf_ingest_vs_images.sh  sqlite3_commands.sh
weather_project/src/weather_project/: __init__.py  config.py  db.py  ingest.py  ingest_image_recognition.py  models.py
weather_project/src/weather_project/parsers/: __init__.py  common.py  csv_parser.py  pdf_image_recognition_parser.py  pdf_parser.py
weather_project/tests/: test_image_recognition_ingest.py  test_pdf_parser_snippets.py
