[tool.poetry]
name = "apple-weather-project"
version = "0.1.0"
description = "Weather take-home ingestion and analysis pipeline"
authors = ["Mark Cosciello <mark.cosciello@paramount.com>"]
readme = "README.md"
packages = [{ include = "weather_project", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pandas = "^2.2.2"
sqlalchemy = "^2.0.36"
pdfplumber = "^0.11.4"
jupyter = "^1.1.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[tool.poetry.scripts]
ingest-weather = "weather_project.ingest:main"
ingest-weather-image-recognition = "weather_project.ingest_image_recognition:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
